Add the peliheppu www pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,72 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    .container {
+      max-width: 1100px;
+      margin: auto;
+      padding: 40px 20px;
+    }
+  </style>
+  <title>Gameguy Mobile Games</title>
+</head>
 <body>
-<h1>Peliheppu</h1>
-  
+
+<header>
+  <div class="logo">
+    <img src="images/gameguy.png" alt="Gameguy Logo">
+  </div>
+  <nav>
+    <a href="privacy_policy.html">Privacy policy</a>
+    <a href="about_us.html">About us</a>
+  </nav>
+</header>
+
+<div class="hero">
+  <h1>Mobile Games</h1>
+</div>
+
+<div class="container">
+
+  <section class="games">
+    <!-- Mazing Abby -->
+    <div class="game">
+      <a href="mazing_abby.html">
+        <img src="images/abby_logo.png" alt="Mazing Abby">
+      </a>
+      <h2>Mazing Abby</h2>
+      <p>Navigate a maze, overcome obstacles, and collect diamonds in this puzzle game</p>
+      <a href="mazing_abby.html" class="button">Learn More</a>
+    </div>
+
+    <!-- Faraway Quest - Escapes -->
+    <div class="game">
+      <a href="faraway_quest_escapes.html">
+        <img src="images/escaperoom_logo.png" alt="Faraway Quest - Escapes">
+      </a>
+      <h2>Faraway Quest - Escapes</h2>
+      <p>An escape room game with six uniquely themed rooms</p>
+      <a href="faraway_quest_escapes.html" class="button">Learn More</a>
+    </div>
+
+    <!-- Faraway Quest -->
+    <div class="game">
+      <a href="faraway_quest.html">
+        <img src="images/farawayquest_logo.png" alt="Faraway Quest">
+      </a>
+      <h2>Faraway Quest</h2>
+      <p>Faraway Quest is a classic adventure game</p>
+      <a href="faraway_quest.html" class="button">Learn More</a>
+    </div>
+  </section>
+</div>
+
+  <footer>
+    &copy; 2025 Gameguy Peliheppu Team Katri Turunen & Roni Riska. All rights reserved.
+  </footer>
+
 </body>
-  
 </html>
