Add utm_source to Play store links

--- a/faraway_quest.html
+++ b/faraway_quest.html
@@ -43,7 +43,7 @@
         <a href="https://www.youtube.com/watch?v=qR5r0rIPVHQ" target="_blank">YouTube</a>.
       </p>
 
-      <a href="https://play.google.com/store/apps/details?id=fi.salmonsnakegames.farawayquest" target="_blank">
+      <a href="https://play.google.com/store/apps/details?id=fi.salmonsnakegames.farawayquest&referrer=utm_source%3Dgameguy" target="_blank">
         <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" 
          alt="Get it on Google Play" 
          style="height: 60px;">
