--- a/faraway_quest_escapes.html
+++ b/faraway_quest_escapes.html
@@ -65,7 +65,7 @@
         Watch the game trailer on <a href="https://www.youtube.com/watch?v=mlqPbjpGUfU" target="_blank">YouTube</a>.
       </p>
 
-      <a href="https://play.google.com/store/apps/details?id=fi.salmonsnakegames.escaperoom" target="_blank">
+      <a href="https://play.google.com/store/apps/details?id=fi.salmonsnakegames.escaperoom&referrer=utm_source%3Dgameguy" target="_blank">
         <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" 
          alt="Get it on Google Play" 
          style="height: 60px;">
