--- a/mazing_abby.html
+++ b/mazing_abby.html
@@ -53,7 +53,7 @@
       <p>
         With its retro-inspired design and classic maze gameplay, the game brings a nostalgic touch while offering fresh and engaging puzzles.
       </p>
-      <a href="https://play.google.com/store/apps/details?id=peliheppu.mazing.abby" target="_blank">
+      <a href="https://play.google.com/store/apps/details?id=peliheppu.mazing.abby&referrer=utm_source%3Dgameguy" target="_blank">
         <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" 
          alt="Get it on Google Play" 
          style="height: 60px;">
